<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:attrs="http://schemas.android.com/apk/res-auto"
    app:ignore="NamespaceTypo">

    <data>

        <variable
            name="cusineListAdapter"
            type="com.gox.foodiemodule.adapter.CusineListAdapter" />


    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/foodie_apply_filter"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp">

                <TextView
                    style="@style/MediumText.colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/filter" />

                <TextView
                    style="@style/MediumText.colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reset_tv"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/ivClose"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:drawablePadding="@dimen/_5sdp"
                    android:text="@string/reset" />

                <ImageView
                    android:id="@+id/ivClose"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_foodie_cross"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sort_layout"
                android:orientation="vertical">
                <TextView
                    style="@style/MediumText.colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/foodie_app_bg"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/show_with_resturant" />

                <RadioGroup
                    android:id="@+id/type_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp">

                    <RadioButton
                        style="@style/MediumText.colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_8sdp"
                        android:buttonTint="@color/foodie_red"
                        android:text="@string/pure_veg" />

                    <RadioButton
                        style="@style/MediumText.colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_8sdp"
                        android:buttonTint="@color/foodie_red"
                        android:text="@string/non_veg" />

                    <RadioButton
                        style="@style/MediumText.colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_8sdp"
                        android:buttonTint="@color/foodie_red"
                        android:text="@string/free_delivery" />


                </RadioGroup>
            </LinearLayout>
            <TextView
                style="@style/MediumText.colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/foodie_app_bg"
                android:padding="@dimen/_8sdp"
                android:text="@string/COSUINE" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cousine_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adapter="@{cusineListAdapter}"
                android:padding="@dimen/_5sdp"
                android:visibility="gone"
                attrs:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/tvNoCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/no_categories_found"/>

        </LinearLayout>

        <Button
            android:id="@+id/foodie_apply_filter"
            style="@style/SmallText.colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/red"
            android:text="@string/apply_filter" />

    </RelativeLayout>
</layout>