<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.gox.foodiemodule.fragment.coupon.add_note.AddNoteFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/foodie_add_note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/add_note"
            android:textColor="@color/foodie_red" />

        <EditText
            android:id="@+id/et_add_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/foodie_add_note_label"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/custom_roundcorner_button"
            android:backgroundTint="@color/app_background_color"
            android:fontFamily="@font/avenirltstd_medium"
            android:gravity="start"
            android:hint="@string/write_a_note"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="@dimen/_80sdp"
            android:singleLine="true"
            android:textSize="@dimen/_11sdp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/foodie_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_add_note"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/submit"
            android:textColor="@color/foodie_red" />
    </RelativeLayout>
</layout>