<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:attrs="http://schemas.android.com/apk/res-auto"
    app:ignore="NamespaceTypo">

    <data>

        <variable
            name="menuItemListAdapter"
            type="com.gox.foodiemodule.adapter.MenuItemListAdapter" />

        <variable
            name="resturantDetailViewModel"
            type="com.gox.foodiemodule.ui.resturantdetail_activity.RestaturantDetailViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/foodie_app_bg">

        <include
            android:id="@+id/resturant_detail_toolbar"
            layout="@layout/foodie_toolbar_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/view_cart_layout"
            android:layout_below="@+id/resturant_detail_toolbar"
            android:layout_marginTop="-2dp"
            android:scrollbars="none"
            android:entries="@array/restaturant_type"
            android:textSize="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    attrs:cardCornerRadius="@dimen/_8sdp"
                    attrs:cardElevation="@dimen/_2sdp"
                    attrs:cardBackgroundColor="@color/colorWhite"
                    attrs:cardUseCompatPadding="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/_6sdp"
                        android:orientation="vertical">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >

                            <TextView
                                android:id="@+id/restaturant_name"
                                style="@style/SmallText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/_3sdp"
                                android:textStyle="bold"
                                app:text="@string/dummy_resturant_name"
                                android:textSize="@dimen/_13sdp"
                                android:textColor="@color/black" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_toEndOf="@+id/restaturant_name"
                                android:padding="@dimen/_3sdp"
                                android:src="@drawable/ic_like"
                                android:visibility="gone" />

                        </RelativeLayout>


                        <TextView
                            android:id="@+id/restaturant_cusinetype_tv"
                            style="@style/SmallText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_3sdp"
                            android:textColor="@color/greay"
                            android:maxLines="2"
                            app:text="Arabian" />


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:minWidth="@dimen/_70sdp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/foodie_round_corner"
                                android:orientation="vertical">


                                <TextView
                                    android:id="@+id/eta_time_tv"
                                    style="@style/VerySmallText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    app:text="@string/dummy_restaturant_duration"
                                    android:textColor="@color/black" />

                                <TextView
                                    style="@style/VerySmallText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="@dimen/_1sdp"
                                    android:text="@string/timing" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:minWidth="@dimen/_70sdp"
                                android:background="@drawable/foodie_round_corner"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/rating_tv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:drawableEnd="@drawable/ic_star"
                                    android:drawablePadding="@dimen/_5sdp"
                                    android:drawableTint="@color/foodie_red"
                                    app:text="@string/dummy_star_rating"
                                    android:textColor="@color/black"
                                    style="@style/VerySmallText"
                                    app:targetApi="m" />

                                <TextView
                                    style="@style/VerySmallText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/rating" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:minWidth="@dimen/_70sdp"
                                android:background="@drawable/foodie_round_corner"
                                android:orientation="vertical">


                                <TextView
                                    android:id="@+id/minamount_tv"
                                    style="@style/VerySmallText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    app:text="@string/foodie_price_value"
                                    android:textColor="@color/black" />

                                <TextView
                                    style="@style/VerySmallText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/foodie_price" />

                            </LinearLayout>

                        </RelativeLayout>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_2sdp">

                    <TextView
                        style="@style/VerySmallText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:padding="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/items_available"
                        android:textColor="@color/foodie_red" />

                    <Spinner
                        android:id="@+id/restaturantTypeSpinner"
                        style="@style/mySpinnerItemStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:entries="@array/restaturant_type"
                        android:padding="@dimen/_5sdp" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/resturantsListAdapter_frghome_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:adapter="@{menuItemListAdapter}"
                    android:padding="@dimen/_5sdp"
                    app:listitem="@layout/restaurantdetail_menu_listitem"
                    attrs:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/view_cart_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_5sdp"
            style="@style/SmallText"
            android:background="@drawable/foodie_round_corner"
            android:backgroundTint="@color/foodie_red"
            android:onClick="@{() -> resturantDetailViewModel.openCartPage()}"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_items_count_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_foodie_count_txt"
                    style="@style/SmallText"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_charges_may_apply"
                    style="@style/SmallText"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_8sdp" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_centerInParent="true"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:drawableEnd="@drawable/ic_shopping_bag"
                android:drawableRight="@drawable/ic_shopping_bag"
                android:drawablePadding="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/view_cart"
                style="@style/SmallText"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </RelativeLayout>


    </RelativeLayout>


</layout>